[package]
name = "mcl_rust"
version = "1.0.0"
authors = ["MITSUNARI Shigeo <herumi@nifty.com>"]
description = "a wrapper class/function of a pairing library; https://github.com/herumi/mcl"
license = "BSD-3-Clause OR MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"
documentation = "https://docs.rs/mcl_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0"
